object request and response of /register endpoint
