# api.yml
@@ -25,7 +25,7 @@ paths:
         content:
           application/json:
             schema:
-                $ref: "#/components/schemas/Profile"
+              $ref: "#/components/schemas/RegisterRequest"
       responses:
         '200':
           description: User registration successful. Returns the ID of the user.
@@ -38,17 +38,48 @@ paths:
           content:
             application/json:    
               schema:
-                $ref: "#/components/schemas/RegisterErrorResponse"
+                $ref: "#/components/schemas/GeneralErrorResponse"
         '409':
           description: Conflict Error. Phone Number Already Exists
           content:
             application/json:    
               schema:
-                $ref: "#/components/schemas/RegisterErrorResponse"
+                $ref: "#/components/schemas/GeneralErrorResponse"
+
+  /login:
+    post:
+      summary: Authenticate User
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginRequest"
+      responses:
+        '200':
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        '400':
+          description: Bad Request (Unsuccessful login)
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/GeneralErrorResponse"
 
 components:
   schemas:
-    Profile:
+    GeneralErrorResponse:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+
+    RegisterRequest:
       type: object
       required:
         - phone_number
@@ -69,6 +100,7 @@ components:
           minLength: 6
           maxLength: 64
           pattern: '^(?=.*[A-Z])(?=.*\d)(?=.*\W).*$'
+
     RegisterResponse:
       type: object
       required:
@@ -78,10 +110,29 @@ components:
           type: string
         created_id:
           type: integer
-    RegisterErrorResponse:
+
+    LoginRequest:
       type: object
       required:
-        - message
+        - phone_number
+        - password
       properties:
-        message:
+        phone_number:
           type: string
+          description: User's phone number
+        password:
+          type: string
+          description: User's password
+      
+    LoginResponse:
+      type: object
+      required:
+        - user_id
+        - jwt_token
+      properties:
+        user_id:
+          type: integer
+          description: ID of the authenticated user
+        jwt_token:
+          type: string
+          description: JWT token with RS256 algorithm
